<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">运动能量</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">titel</string>
    <string name="search">search</string>
    <string name="menu">menu</string>
    <string name="exit">exit</string>
    <string name="set_id">设置个人ID</string>
    <string name="note">健身笔记</string>
    <string name="time">定时提醒</string>
    <string name="colorie">卡路里</string>
    <string name="exitset">你确定要完全退出吗？</string>
    
    <string name="bmi_button">计算体重BMI</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="my_center">个人中心</string>
    <string name="my_title">运动能量</string>
    <string name="sport_center">运动中心</string>
    <string name="food_center">健康管理</string>
    <string name="bmishow">计算结果</string>
    <string name="bmi_height">请输入你的身高</string>
    <string name="bmi_width">请输入你的体重</string>
    <string name="chest_exercise">胸部训练</string>
    <string name="leg_exercise">腿部训练</string>
    <string name="back_exercise">背部训练</string>
    <string name="shoulder_exercise">肩部训练</string>

</resources>
